--- a/pipelines/cd-validate-plan-apply-separate-stages.yml
+++ b/pipelines/cd-validate-plan-apply-separate-stages.yml
@@ -4,9 +4,9 @@ trigger: none
 pr: none
 
 variables:
-- group: global-variables
+# - group: global-variables
 - name: azureSubscription
-  value: AzureSubscription
+  value: arm-svc-connection
 - name: terraformVersion
   value: 1.0.7
 - name: terraformPath
