--- a/terraform/backend.conf
+++ b/terraform/backend.conf
@@ -1,4 +1,4 @@
-resource_group_name = "StorageAccountsRG"
-storage_account_name = "baboterraform"
-container_name = "tfstate"
+resource_group_name = "aks-rg"
+storage_account_name = "terraformbackendstg1"
+container_name = "backend"
 key = "terraform.tfstate"
