--- a/pipelines/cd-validate-plan-apply-one-stage-tfvars.yml
+++ b/pipelines/cd-validate-plan-apply-one-stage-tfvars.yml
@@ -229,7 +229,7 @@ stages :
               command: 'apply'
               commandOptions: '-input=false -auto-approve -var="ssh_public_key=$(sshPublicKey)" -var="location=$(location)" -var="resource_group_name=$(resourceGroupName)" -var="script_storage_account_name=$(storageAccountName)" -var="script_storage_account_key=$(storageAccountKey)" -var="container_name=$(containerName)" -var="script_name=$(scriptName)" -var="kubernetes_version=$(kubernetesVersion)" -var-file="$(System.DefaultWorkingDirectory)/tfvars/$(environment)/$(environment).tfvars"'
               environmentServiceNameAzureRM: $(azureSubscription)
-              workingDirectory: '$(System.DefaultWorkingDirectory)/$(terraformPath)/'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/$(terraformPath)'
           - task: AzureCLI@2
             displayName: 'Delete Temporary Storage Account'
             condition: always()
