--- a/pipelines/cd-test-web-app.yml
+++ b/pipelines/cd-test-web-app.yml
@@ -60,7 +60,7 @@ variables:
 - name: routeTableName
   value: DefaultRouteTable
 - name: location
-  value: westeurope
+  value: southindia
 - name: ruleCollectionGroupName
   value: DefaultDnatRuleCollectionGroup
 - name: dnatRuleCollectionName
