--- a/pipelines/cd-validate-plan-apply-one-stage-vars.yml
+++ b/pipelines/cd-validate-plan-apply-one-stage-vars.yml
@@ -18,7 +18,7 @@ variables:
 - name: prefix
   value: Babosbird
 - name: location
-  value: westeurope
+  value: southindia
 - name: kubernetesVersion
   value: '1.21.2'
 - name: resourceGroupName
