--- a/pipelines/cd-syntheticapi.yml
+++ b/pipelines/cd-syntheticapi.yml
@@ -59,7 +59,7 @@ variables:
 - name: routeTableName
   value: DefaultRouteTable
 - name: location
-  value: westeurope
+  value: southindia
 - name: ruleCollectionGroupName
   value: DefaultDnatRuleCollectionGroup
 - name: dnatRuleCollectionName
